app/globals.css
@import "tailwindcss";

:root {
  --background: #f2DCDB;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}


body {
  background: #ffffff;
  color: #171717;
  font-family: Arial, Helvetica, sans-serif;
}

.font-playfair {
  font-family: var(--font-playfair);
}

.font-handwriting {
  font-family: var(--font-indie);
}

